# kbeauty-explorer-snowflake

./: .gitignore  LICENSE  README.md  app.py  config.yaml  pyproject.toml
k_beauty_app/: database.py  models.py  validation.py
sql_scripts/: 01_schema.sql  02_dictionaries.sql  03_products_data.sql
